--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,3 +20,27 @@ nav {
     text-align: right;
     font-size: 20px;
 }
+
+.resume h2 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.user {
+    text-align: center;
+}
+
+.user .item {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.user img {
+    width: 200px;
+    border-radius: 50%;
+}
+
+.username {
+    font-size: 2.5rem;
+    color: #777;
+}
