--- a/templates/base.html
+++ b/templates/base.html
@@ -52,5 +52,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
+<script src="https://use.fontawesome.com/c79df38bb7.js"></script>
 </body>
 </html>
