Add OS, move SO tags

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,7 +68,9 @@ nav {
     margin-left: 15px;
 }
 
-.lang .tags {
+.tags {
+    margin-top: 30px;
+    text-align: center;
     margin-left: 15px;
 }
 
